[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Pat Laster <palaster307@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]