[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Pat Laster <palaster307@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
image = { version = "0.24.9", features = ["png"] }
rodio = "0.17.3"